--- a/pages/nao/css/nao.css
+++ b/pages/nao/css/nao.css
@@ -89,12 +89,15 @@ p{
     margin-bottom: 5%;
 }
 
+video {
+  width: 960px;
+  height: 540px;
+}
+
 .videoInsert {
   position: absolute; 
   right: 0; 
   bottom: 0;
-  min-width: 25%; 
-  min-height: 25%;
   width: auto; 
   height: auto; 
   z-index: -100;
