--- a/pages/nao/css/nao.css
+++ b/pages/nao/css/nao.css
@@ -89,18 +89,6 @@ p{
     margin-bottom: 5%;
 }
 
-video {
-  width: 960px;
-  height: 540px;
-}
-
-.videoInsert {
-  position: absolute; 
-  right: 0; 
-  bottom: 0;
-  width: auto; 
-  height: auto; 
-  z-index: -100;
-  background-size: cover;
-  overflow: hidden;
+#video-nao-container{
+  transform: scale(0.75);
 }
